# music-machine-builder

./: .gitignore  CMakeLists.txt  README.md  cmake_declare_and_fetch.cmake.in  opengl.cmake.in
examples/blink/: CMakeLists.txt  blink.cpp
examples/tlc5940/: CMakeLists.txt  tlc5940_example.cpp
ext/LearnOpenGL/: model.h
ext/imgui/: CMakeLists.txt
libraries/Tlc5940/: CMakeLists.txt  Teensy_IMXRT.h  Tlc5940.cpp  Tlc5940.h  pin_functions.h  tlc_config.h  tlc_shifts.h
poc/shared_mem/: CMakeLists.txt  SketchBase.cpp  SketchBase.h  SketchFactory.cpp  SketchFactory.h  TestSketch.c  TestSketch.cpp  TestSketch.h  magic_number.cpp  main.cpp
shared/model/: machinemodel.cpp  machinemodel.h
src/: CMakeLists.txt  main.cpp  opengl.cmake.in
src/model/: machinemodel.cpp  machinemodel.h
src/resources/: alpine-keycap-led-intermediate.cpp
src/sketch/: SketchEngine.cpp  SketchEngine.h  SketchFactory.cpp  SketchFactory.h
src/view/: ImGuiController.cpp  ImGuiController.h  ImGuiSerialMonitor.cpp  ImGuiSerialMonitor.h  ViewController.cpp  ViewController.h
